scss/components/_chat.scss
/* ... */
#chat-container {
  display: flex;
  flex-flow: column;
  user-select: none;
  background-color: $chat-main-bg;
  height: 100vh;
  max-height: 90vh;
  overflow-y: scroll;
  position: relative;
  max-width: 1080px !important;
  margin: 0 auto !important;

  &.non-scrollable {
    overflow-y: hidden !important;
  }

  .chat-body-scroll {
    height: 425px;
  }

  .chat-video-incoming {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 1000;
    background-color: rgba(10, 16, 35, 0.9) !important;
    // display: none;
  }
}

.chat-video-container {
  position: relative;
  height: 100%;
  display: none;

  .chat-video-control {
    clear: both;
    width: 100%;
    position: absolute;
    bottom: 10px;
    z-index: 100;
  }
}

#chat-container,
#chat-notification {
  z-index: 10;
  position: fixed;
  bottom: 6rem;
  right: 1rem;
  max-width: 376px;
  width: 100%;
  border-radius: 8px !important;
  // overflow: hidden;
  .chat-header-intro {
    padding: 1rem;
    background-color: $main-color;
    position: sticky;
    top: 0;
    margin-bottom: 1.5rem;
    z-index: 999;

    .btn-new {
      position: absolute;
      right: 1rem;
      bottom: -2.8rem;
      box-shadow: 0 4px 10px #b2bbc1c4;
    }
  }

  .chat-header-container {
    cursor: pointer;
    // height: 80px;
    &:hover {
      .chat-header {
        background-color: $main-color !important;

        .chat-header-user {
          .user-name,
          .user-role {
            color: #fff;
          }
        }

        .chat-header-video {
          .timestamp {
            color: #fff;
          }
        }
      }
    }

    .chat-header {
      background-color: $main-color;
      box-shadow: 0px 2px 15px rgba(31, 31, 31, 0.25);
      padding: 1rem;
      transition: all 0.2s ease-in-out;

      .button {
        padding: 0;
      }

      .chat-header-action {
        img {
          display: none;
        }
      }

      // Columns Begin
      .chat-header-user {
        .user-name,
        .user-role {
          margin: 0;
          color: $white;
        }

        .user-role {
          @extend .timestamp;
        }
      }

      .chat-header-video {
        .timestamp {
          display: none;
        }
      }

      .counter {
        display: none;
      }

      // Columns End

      // States Begin
      &.shrinked {
        border-radius: 0.5rem;
        margin: 0.5rem 1rem;
        background-color: transparent;

        .chat-header-action {
          img {
            display: block;
            margin: 0.5rem auto 0;
            float: none;
          }

          button {
            display: none;
          }
        }

        .chat-header-user {
          p {
            color: black;
          }

          span {
            color: #323232;
          }
        }

        .chat-header-video {
          .btn-video {
            display: none;
          }

          .timestamp {
            display: inherit;
          }
        }

        .counter {
          display: none;
        }
      }

      &.active {
        background-color: #fff;
        position: relative;

        .counter {
          display: block;
          text-align: center;
          width: 1.5rem;
          height: 1.5rem;
          line-height: 1.2em;
          border-radius: 50%;
          background-color: $alert-color;
          color: #fff;
          font-size: 0.85rem;
          padding: 0.25rem;
          position: absolute;
          right: -0.3rem;
          bottom: -5px;
        }
      }

      // States End
    }
  }

  .chat-body-container {
    overflow: hidden;
    overflow-y: scroll;
    // height: 1000px;

    .chat-body {
      padding: 1rem;
      padding-bottom: 5rem;
    }
  }

  .chat-input-container {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: $chat-main-bg;
    // border-top: 1px solid #eaeaea;
    flex: 1 1 auto;
    // .chat-input {
    //   background-color: #fff;
    //   margin: 0.25rem 0.5rem;
    //   border-radius: 4px;
    // }
    div textarea {
      background-color: $chat-user-bg;
      margin: 0.25rem 0.5rem;
      border-radius: 4px;
    }

    .help-text {
      margin: 0.3125rem 1rem 1rem;
      font-size: rem-calc(10);
      color: rgba($black, $B-text);
    }

    .attachments {
      display: block;
      max-height: 456px;
      padding: 0.25rem 1rem;
      background: transparent;
      border-bottom: 1px solid rgba($black, $B-dividers);
      overflow-x: auto;
      white-space: nowrap;

      .file-attachment {
        margin: 0.25rem 1rem;
      }
    }

    [type="text"],
    textarea {
      width: 100%;
      margin: 0.5rem 0 0;
      padding: 0.3125rem 1rem;
      border: 0px;
      box-shadow: none;
      font-size: rem-calc(14);
      resize: none;
      min-height: 2em;
      height: 2rem;
      background-color: transparent;
    }

    button {
      margin: 0.5rem 1rem;
      padding: 0.5rem;
    }
  }
}

.counter-notif {
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 1rem;
  background-color: red;
}

